Fix avatar decoration ring on mobile
Use inset positioning instead of transform for better cross-device compatibility

--- a/css/style.css
+++ b/css/style.css
@@ -652,11 +652,10 @@ img {
 
 .avatar-decoration {
     position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    width: calc(100% + 30px);
-    height: calc(100% + 30px);
+    top: -15px;
+    left: -15px;
+    right: -15px;
+    bottom: -15px;
     border: 2px dashed var(--secondary-color);
     border-radius: 50%;
     opacity: 0.5;
@@ -664,8 +663,8 @@ img {
 }
 
 @keyframes rotate {
-    from { transform: translate(-50%, -50%) rotate(0deg); }
-    to { transform: translate(-50%, -50%) rotate(360deg); }
+    from { transform: rotate(0deg); }
+    to { transform: rotate(360deg); }
 }
 
 
